Moved clock to the bottom and fixed vertical alignment for the bottom variable text

--- a/assets/style.css
+++ b/assets/style.css
@@ -16,10 +16,29 @@ body {
     padding:10px;
     border-radius: 25px;
     border: 1px solid silver;
+    height:360px;
+}
+
+.topOfScreenText {
+    text-align: center;
+    margin-top:5px;
+    color: rgba(255,255,255,0.4);
+    text-shadow: 0 -2px  rgba(0,0,0,0.6);
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    overflow: hidden;
+}
+
+div.topOfScreenText > * {
+    color: rgba(255,255,255,0.4);
+    text-shadow: 0 -2px  rgba(0,0,0,0.6);
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #displayBoardInnerWrapper {
     background-color: black;
+    margin-top:10px;
     margin-bottom:5px;
     width:100%;
     height:240px;
@@ -32,16 +51,16 @@ body {
     margin-bottom:0px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10px;
-    width:500px;
-    height:75px;
+    margin-bottom: 10px;
+    width:400px;
+    height:80px;
     text-align: center;
     font-size:75px;
-    line-height: 100px;
-    color: rgb(127, 223, 255);
+    line-height: 80px;
+    color: orange;
     vertical-align: middle;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
     border: 2px solid silver;
     border-width: 0px;
 }
@@ -56,7 +75,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     overflow: hidden;
-    color: orange;
+    color:#f2ad19;
     text-align: center;
 }
 
@@ -245,6 +264,13 @@ body {
     text-align: left;
 }
 
+.nextTrainsTableStaticText {
+    width:100%;
+    white-space: nowrap;
+    overflow: scroll;
+    text-align: center;
+}
+
 #nextTrainsTableDueOnTime {
     text-align: right;
     color:green;
@@ -261,23 +287,7 @@ body {
     color:#f2ad19;
 }
 
-.bottomOfScreenText {
-    text-align: center;
-    margin-top:15px;
-    margin-bottom:auto;
-    color: rgba(255,255,255,0.4);
-    text-shadow: 0 -2px  rgba(0,0,0,0.6);
-    font-size: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    overflow: hidden;
-}
 
-div.bottomOfScreenText > * {
-    color: rgba(255,255,255,0.4);
-    text-shadow: 0 -2px  rgba(0,0,0,0.6);
-    font-size: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
 
 #footer {
     position: fixed;
